# 2026_CVPRW_CloudPrompts

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml
cloudprompts/: __init__.py  evaluation.py  finetune.py  fullfinetune.py  inference.py  lora.py
code/: pyproject.toml
code/cloudprompts/: __init__.py  evaluation.py  finetune.py  fullfinetune.py  inference.py  lora.py  models.py
code/cloudprompts/eval/: __init__.py  seg_eval.py
code/cloudprompts/fine_tune/: clipseg.py
code/cloudprompts/inference/: __init__.py  clipseg.py  clipseg_cloudsen.py
code/data/cloudsen12plus/: download_cloudsen12plus_p509.sh  export_p509_high_npz.py
code/experiments/: clipseg_cloudsen_lora.ipynb  clipseg_cloudsen_lora_analysis.ipynb  clipseg_cloudsen_zs.ipynb  clipseg_cloudsen_zs_test.ipynb  cloudsen12plus_zsod.ipynb
code/explore/: cloudsen12plus_preview.ipynb
code/explore/sparcs_baseline_lseg/: make_sparcs_splits.py  test_run.txt  train_sparcs_lseg_baseline.py
code/fine_tune/clipseg_lora_cloudsen/: adapter_config.json  preprocessor_config.json
code/notebooks/: clipseg_cloudsen_comparison.ipynb  clipseg_cloudsen_fft.ipynb  clipseg_cloudsen_fft_low_data.ipynb  clipseg_cloudsen_ladder_v1.ipynb  clipseg_cloudsen_ladder_v2.ipynb  clipseg_cloudsen_ladder_v3.ipynb  clipseg_cloudsen_ladder_v4.ipynb  clipseg_cloudsen_ladder_v5.ipynb  clipseg_cloudsen_lora.ipynb  clipseg_cloudsen_lora_low_data.ipynb  clipseg_cloudsen_low_data.ipynb  clipseg_cloudsen_lower_pct.ipynb  clipseg_cloudsen_zs.ipynb  clipseg_cloudsen_zs_lora.ipynb  complete_low_data_sweep.ipynb  fft_analysis.ipynb  fft_sweep_analysis.ipynb  figures.ipynb  lora_analysis.ipynb  prompt_variants.ipynb  samples.ipynb  samples_intro.ipynb  zs_fft_lora_lowdata.ipynb
data/: download_cloudsen12plus_p509.sh
notebooks/: additonal-vqas.ipynb  demo.ipynb  figures.ipynb  harshith_test.ipynb  helene.ipynb  temperature.ipynb  test.ipynb
weather_mind/: api.py  detector.py  labeling.py  mind.py  utils.py
(+115 files in other folders)
